--- a/index.html
+++ b/index.html
@@ -64,9 +64,10 @@
               </label>
             </div>
           </fieldset>
-          <button type="submit" class="button search-form__submit-button">
-            Найти
-          </button>
+            <button type="submit" class="button search-form__submit-button">
+              Найти
+            </button>
+          
         </form>
       </section>
       <section class="content__details">
@@ -106,7 +107,7 @@
       </li>
     </template>
     <template class="more-button-template">
-      <li><button class="button more-button">Показать еще</button></li>
+      <li><button class="button more-button">Показать ещё</button></li>
     </template>
 
     <template class="error-template">
